(lang dune 3.11)

(name ewe)

(generate_opam_files true)

(source
 (github syedtaz/ewe))

(authors "Tazmilur Saad")
(maintainers "Tazmilur Saad")

(package
 (name ewe)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
