(library
 (name ewe)
 (libraries incremental core async base64 events runtime)
 (foreign_archives ewe)
 (inline_tests)
 (preprocess
  (pps
   ppx_jane
   ppx_let
   ppx_sexp_conv
   ppx_compare
   bonsai.ppx_bonsai
   ppx_inline_test
   ppx_expect
   ppx_assert)))

(data_only_dirs bindings)

(rule
 (deps
  (source_tree bindings))
 (targets libewe.a)
 (action
  (no-infer
   (progn
    (copy bindings/cmake-build-debug/libewe.a libewe.a)))))
